# tetris

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cfg  README.md
Scripts/macOS/: build_xcode.sh  formatter.sh
Scripts/windows/: build_vs22.bat  formatter.bat
Source/: Main.cpp
Source/Components/: MainComponent.cpp  MainComponent.h
Source/Components/Block/: Block.cpp  Block.h  Blocks.h
Source/Components/Grid/: Grid.cpp  Grid.h
Source/Components/Position/: Position.cpp  Position.h
Source/Helpers/: Colours.h  Sizes.h  Time.h
